@@ -2927,6 +2927,26 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="Paste"
+				>
+				<File
+					RelativePath=".\Commands\PasteCopyCommand.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Commands\PasteCopyCommand.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Commands\PasteMoveCommand.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Commands\PasteMoveCommand.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Utility Dialogs"
