@@ -683,6 +683,18 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;jpg;jpeg;jpe;manifest"
 			>
 			<File
+				RelativePath="..\Resources\clipcopy.ico"
+				>
+			</File>
+			<File
+				RelativePath="..\Resources\clipcut.ico"
+				>
+			</File>
+			<File
+				RelativePath="..\Resources\clippaste.ico"
+				>
+			</File>
+			<File
 				RelativePath="..\Resources\menuabout.ico"
 				>
 			</File>
